vlib/v/checker/tests/mut_int.vv
fn foo(mut x int) {
}

fn main() {
}
